--- a/interface/main.html
+++ b/interface/main.html
@@ -92,11 +92,11 @@
   <div id="content"></div>
 
   <footer>
-    <div class="footer-icon">Home</div>
-    <div class="footer-icon">Post</div>
-    <div class="footer-icon">Chat</div>
-    <div class="footer-icon">Friends</div>
-    <div class="footer-icon">Settings</div>
+    <div class="footer-icon">🪩</div>
+    <div class="footer-icon">🕊️</div>
+    <div class="footer-icon">💌</div>
+    <div class="footer-icon">👩‍❤️‍👨</div>
+    <div class="footer-icon">🧩</div>
   </footer>
 
   <script type="module">
