--- a/registration.html
+++ b/registration.html
@@ -1,141 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>New Account</title>
+  <meta charset="UTF-8">
+  <title>Smart Burme - Register</title>
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-
     body {
-      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-      background-size: 400% 400%;
-      animation: backgroundShift 10s ease infinite;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
-      height: 100vh;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #00c6ff, #0072ff);
+      font-family: Arial, sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    @keyframes backgroundShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .floating-title {
-      font-size: 48px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      text-align: center;
+      animation: float3D 4s ease-in-out infinite;
     }
 
     @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(10deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-10deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 300px;
+    h2 {
+      color: white;
+      margin-bottom: 30px;
     }
 
     input {
-      padding: 12px;
+      width: 250px;
+      padding: 10px;
+      margin: 10px;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 10px;
+      outline: none;
     }
 
-    .btn {
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      color: white;
+    button {
+      width: 250px;
+      padding: 10px;
+      margin-top: 15px;
+      background-color: #ffffff;
+      color: #0072ff;
+      border: none;
+      border-radius: 10px;
       font-weight: bold;
-      border-radius: 8px;
-      padding: 12px;
-      text-align: center;
-      text-decoration: none;
-      transition: background-position 0.5s, transform 0.3s;
+      cursor: pointer;
     }
 
-    .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
+    button:hover {
+      background-color: #e0e0e0;
     }
 
-    .login-link {
-      margin-top: 10px;
-      text-align: center;
+    .link {
+      margin-top: 20px;
+      color: #fff;
+      font-size: 14px;
     }
 
-    .login-link a {
-      color: #00d4ff;
+    .link a {
+      color: #ffd700;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
-
-  <div class="floating-title">New Account</div>
-
-  <form id="registerForm">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit" class="btn">Create Account</button>
-  </form>
-
-  <div class="login-link">
-    Already have an account? <a href="login.html">Login</a>
+  <div class="container">
+    <h2>Create Account</h2>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="registerUser(email.value, password.value)">Register</button>
+    <div class="link">
+      <p>Already have an account? <a href="login.html">Login</a></p>
+    </div>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  <!-- Firebase App -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    const form = document.getElementById("registerForm");
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      createUserWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("Account created successfully!");
-          window.location.href = "login.html";
-        })
-        .catch((error) => {
-          alert("Error: " + error.message);
-        });
-    });
-  </script>
+  <!-- auth.js -->
+  <script src="auth.js"></script>
 </body>
 </html>
