--- a/forget_password.html
+++ b/forget_password.html
@@ -1,208 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Forgot Password - SMART BURME</title>
+  <meta charset="UTF-8">
+  <title>Smart Burme - Reset Password</title>
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-
     body {
-      background: linear-gradient(120deg, #2b2e4a, #1f293a);
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #00c6ff, #0072ff);
+      font-family: Arial, sans-serif;
       display: flex;
-      align-items: center;
       justify-content: center;
-      overflow: hidden;
+      align-items: center;
       height: 100vh;
-      position: relative;
+      overflow: hidden;
     }
 
     .container {
-      background: rgba(31, 41, 58, 0.8);
-      padding: 40px;
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
-      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(5px);
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-      z-index: 10;
+      padding: 40px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      text-align: center;
+      animation: float3D 4s ease-in-out infinite;
+    }
+
+    @keyframes float3D {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
     h2 {
-      color: #0ef;
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 2em;
-    }
-
-    .input-box {
-      position: relative;
-      margin: 25px 0;
-    }
-
-    .input-box input {
-      width: 100%;
-      height: 50px;
-      background: transparent;
-      border: 2px solid #2c4766;
-      border-radius: 40px;
       color: white;
-      padding: 0 20px;
-      font-size: 1em;
+      margin-bottom: 30px;
+    }
+
+    input {
+      width: 250px;
+      padding: 10px;
+      margin: 10px;
+      border: none;
+      border-radius: 10px;
       outline: none;
     }
 
-    .input-box label {
-      position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translateY(-50%);
-      color: #aaa;
-      pointer-events: none;
-      transition: 0.3s;
-    }
-
-    .input-box input:focus ~ label,
-    .input-box input:valid ~ label {
-      top: 1px;
-      font-size: 0.8em;
-      background: #1f293a;
-      padding: 0 6px;
-      color: #0ef;
-    }
-
-    .btn {
-      width: 100%;
-      height: 45px;
-      background: #0ef;
+    button {
+      width: 250px;
+      padding: 10px;
+      margin-top: 15px;
+      background-color: #ffffff;
+      color: #0072ff;
       border: none;
-      border-radius: 40px;
-      cursor: pointer;
+      border-radius: 10px;
       font-weight: bold;
-      color: #1f293a;
-      margin-top: 10px;
+      cursor: pointer;
     }
 
-    .btn:hover {
-      background: #09c;
-      box-shadow: 0 0 15px #0ef;
+    button:hover {
+      background-color: #e0e0e0;
     }
 
-    .floating {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: 0;
+    .link {
+      margin-top: 20px;
+      color: #fff;
+      font-size: 14px;
     }
 
-    .floating span {
-      position: absolute;
-      display: block;
-      width: 20px;
-      height: 20px;
-      background: rgba(0, 255, 255, 0.2);
-      animation: float 25s linear infinite;
-      border-radius: 50%;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-      }
-    }
-
-    .floating span:nth-child(1) {
-      left: 25%;
-      width: 60px;
-      height: 60px;
-      animation-duration: 20s;
-    }
-
-    .floating span:nth-child(2) {
-      left: 10%;
-      width: 30px;
-      height: 30px;
-      animation-duration: 15s;
-    }
-
-    .floating span:nth-child(3) {
-      left: 70%;
-      width: 20px;
-      height: 20px;
-      animation-duration: 18s;
-    }
-
-    .floating span:nth-child(4) {
-      left: 40%;
-      width: 50px;
-      height: 50px;
-      animation-duration: 22s;
-    }
-
-    .floating span:nth-child(5) {
-      left: 85%;
-      width: 25px;
-      height: 25px;
-      animation-duration: 17s;
+    .link a {
+      color: #ffd700;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-
-  <div class="floating">
-    <span></span><span></span><span></span><span></span><span></span>
-  </div>
-
   <div class="container">
     <h2>Reset Password</h2>
-    <form id="resetForm">
-      <div class="input-box">
-        <input type="email" id="email" required>
-        <label for="email">Gmail</label>
-      </div>
-      <button class="btn" type="submit">Send Reset Email</button>
-    </form>
+    <input type="email" id="email" placeholder="Enter your email"><br>
+    <button onclick="resetPassword(email.value)">Send Reset Email</button>
+    <div class="link">
+      <p>Remember your password? <a href="login.html">Login</a></p>
+    </div>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+  <!-- Firebase App -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    document.getElementById("resetForm").addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-
-      sendPasswordResetEmail(auth, email)
-        .then(() => {
-          alert("Reset link sent to your email.");
-          window.location.href = "login.html";
-        })
-        .catch((error) => {
-          alert("Error: " + error.message);
-        });
-    });
-  </script>
-
+  <!-- auth.js -->
+  <script src="auth.js"></script>
 </body>
 </html>
