--- a/forget_password.html
+++ b/forget_password.html
@@ -77,19 +77,19 @@
 </head>
 <body>
   <div class="container">
-    <h2>Reset Password</h2>
+    <h2>Reset Your Password</h2>
     <input type="email" id="email" placeholder="Enter your email"><br>
     <button onclick="resetPassword(email.value)">Send Reset Email</button>
     <div class="link">
-      <p>Remember your password? <a href="login.html">Login</a></p>
+      <p>Go back to <a href="login.html">Login</a></p>
     </div>
   </div>
 
-  <!-- Firebase App -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 
-  <!-- auth.js -->
+  <!-- Auth Logic -->
   <script src="auth.js"></script>
 </body>
 </html>
