--- a/interface/main.html
+++ b/interface/main.html
@@ -7,150 +7,203 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #00c6ff, #0072ff);
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #1e3c72, #2a5298);
-      overflow-x: hidden;
-      color: white;
+      overflow: hidden;
+      height: 100vh;
     }
-    header {
-      text-align: center;
-      padding: 20px 10px;
-      font-size: 28px;
-      font-weight: bold;
-      text-shadow: 2px 2px 5px #000;
-    }
-    form {
-      margin: 20px auto;
-      width: 90%;
-      max-width: 500px;
+
+    .header {
       display: flex;
-      flex-direction: column;
-      gap: 10px;
+      justify-content: space-around;
+      align-items: center;
       background: rgba(255, 255, 255, 0.1);
-      padding: 15px;
-      border-radius: 15px;
+      padding: 10px 0;
+      color: white;
       backdrop-filter: blur(10px);
+      position: sticky;
+      top: 0;
     }
-    textarea, input[type="file"] {
+
+    .search-box {
+      display: flex;
+      justify-content: center;
+      margin: 10px;
+    }
+
+    .search-box input {
+      width: 60%;
       padding: 10px;
-      border-radius: 10px;
+      border-radius: 20px;
       border: none;
       outline: none;
       font-size: 16px;
     }
-    button {
-      padding: 10px;
-      font-size: 18px;
-      background-color: #4fc3f7;
-      border: none;
+
+    .main {
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      height: calc(100vh - 160px);
+      padding: 20px;
+      gap: 10px;
       color: white;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
     }
-    button:hover {
-      background-color: #0288d1;
-    }
-    #postContainer {
-      margin: 20px auto;
-      max-width: 600px;
-    }
-    .post {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 10px;
-      margin-bottom: 15px;
-      border-radius: 12px;
+
+    .column {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
       backdrop-filter: blur(10px);
+      padding: 10px;
+      overflow-y: auto;
     }
+
+    .floating-buttons {
+      position: fixed;
+      right: 20px;
+      bottom: 80px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .floating-buttons button {
+      padding: 10px 15px;
+      border: none;
+      border-radius: 50%;
+      background: white;
+      color: #0072ff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      font-size: 18px;
+      cursor: pointer;
+    }
+
     .bottom-nav {
       position: fixed;
       bottom: 0;
       width: 100%;
       display: flex;
       justify-content: space-around;
-      background: rgba(0,0,0,0.6);
+      background: rgba(255, 255, 255, 0.2);
       padding: 10px 0;
-      backdrop-filter: blur(6px);
+      backdrop-filter: blur(10px);
     }
-    .bottom-nav button {
-      background: none;
-      border: none;
+
+    .bottom-nav i {
+      font-size: 24px;
       color: white;
-      font-size: 16px;
-      transition: transform 0.3s;
+      cursor: pointer;
     }
-    .bottom-nav button:hover {
-      transform: scale(1.1);
-    }
-    @keyframes float3D {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
-      100% { transform: translateY(0); }
-    }
-    .floating {
-      animation: float3D 2s ease-in-out infinite;
+
+    footer {
+      position: fixed;
+      bottom: 40px;
+      width: 100%;
+      text-align: center;
+      color: white;
+      font-size: 12px;
+      text-shadow: 0 0 10px white;
     }
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header class="floating">Smart Burme</header>
-  <form id="uploadForm">
-    <input type="file" id="mediaInput" accept="image/*,video/*" />
-    <textarea id="messageInput" placeholder="Write your message..."></textarea>
-    <button type="submit">Post</button>
-  </form>
-  <div id="postContainer"></div>
 
-  <div class="bottom-nav">
-    <button>Home</button>
-    <button>Friends</button>
-    <button>Chat</button>
-    <button>Upload</button>
-    <button>Me</button>
+  <div class="header">
+    <div>Newfeed</div>
+    <div>Buy Items</div>
+    <div>About Me</div>
+    <div>Settings</div>
   </div>
 
-  <script type="module">
-    import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-storage.js";
-    import { getDatabase, ref, push, set } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  <div class="search-box">
+    <input type="text" placeholder="Search...">
+  </div>
 
+  <div class="main">
+    <div class="column" id="friends-list">Friends List</div>
+    <div class="column" id="post-area">Post Area</div>
+    <div class="column" id="group-list">Group List</div>
+  </div>
+
+  <div class="floating-buttons">
+    <button title="Group Chat"><i class="fas fa-users"></i></button>
+    <button title="Messages"><i class="fas fa-comments"></i></button>
+  </div>
+
+  <div class="bottom-nav">
+    <i class="fas fa-home"></i>
+    <i class="fas fa-user-friends"></i>
+    <i class="fas fa-plus-circle"></i>
+    <i class="fas fa-bell"></i>
+    <i class="fas fa-user"></i>
+  </div>
+
+  <footer>
+    deployment by Aung Thuyrain - Wayne
+  </footer>
+
+  <!-- Firebase + JS logic here -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+  <script src="auth.js"></script>
+
+  <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
       authDomain: "smart-burme-app.firebaseapp.com",
-      databaseURL: "https://smart-burme-app-default-rtdb.firebaseio.com",
       projectId: "smart-burme-app",
       storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
     };
 
-    const app = initializeApp(firebaseConfig);
-    const storage = getStorage(app);
-    const db = getDatabase(app);
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const auth = firebase.auth();
 
-    document.getElementById("uploadForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const file = document.getElementById("mediaInput").files[0];
-      const message = document.getElementById("messageInput").value;
-
-      if (!file || !message) return alert("Fill everything!");
-
-      const fileRef = sRef(storage, 'uploads/' + file.name);
-      await uploadBytes(fileRef, file);
-      const fileUrl = await getDownloadURL(fileRef);
-
-      const postRef = push(ref(db, "posts"));
-      await set(postRef, {
-        username: "user1",
-        content: message,
-        mediaUrl: fileUrl,
-        mediaType: file.type,
-        timestamp: new Date().toISOString()
-      });
-
-      alert("Posted!");
+    // Handle Auth State Change
+    auth.onAuthStateChanged((user) => {
+      if (!user) {
+        window.location.href = 'login.html';
+      }
     });
+
+    // Post New Post to Firestore
+    function postNewContent(content) {
+      db.collection('posts').add({
+        content: content,
+        userId: auth.currentUser.uid,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      })
+      .then(() => {
+        console.log('Post added successfully');
+        loadPosts();
+      })
+      .catch((error) => console.error('Error adding post: ', error));
+    }
+
+    // Load Posts from Firestore
+    function loadPosts() {
+      db.collection('posts').orderBy('timestamp', 'desc').get()
+        .then((snapshot) => {
+          const postArea = document.getElementById('post-area');
+          postArea.innerHTML = ''; // Clear existing posts
+          snapshot.forEach((doc) => {
+            const post = doc.data();
+            const postElement = document.createElement('div');
+            postElement.classList.add('post');
+            postElement.innerText = post.content;
+            postArea.appendChild(postElement);
+          });
+        })
+        .catch((error) => console.error('Error loading posts: ', error));
+    }
+
+    // Call loadPosts on page load
+    loadPosts();
   </script>
+
 </body>
 </html>
